@@ -17,7 +17,7 @@ public class GraphTest {
 
     /** Tests retrieving an edge of the graph through its label, start, and end */
     @Test
-    public void testGetEdge() throws NoSuchFieldException{
+    public void testGetEdge(){
         graph1.addNode(node1);
         graph1.addNode(node2);
         graph1.addNode(node3);
@@ -30,18 +30,6 @@ public class GraphTest {
         assertEquals(edge1, graph1.getEdge(node1, node2, "Edge1"));
         assertEquals(edge2, graph1.getEdge(node2, node3, "Edge2"));
         assertEquals(edge4, graph1.getEdge(node1, node1, "Edge4"));
-    }
-
-    /** Tests getEdge method throws an exception */
-    @Test(expected = NoSuchFieldException.class)
-    public void testGetEdgeThrows() throws NoSuchFieldException{
-        graph1.getEdge(node1, node2, "Edge2");
-    }
-
-    /** Tests getNode method throws an exception */
-    @Test(expected = NoSuchFieldException.class)
-    public void testGetNodeThrows() throws NoSuchFieldException{
-        graph1.getNode("Node11");
     }
 
     /** Tests returning children of a node */
